# idou-music

./: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
resource/: Makefile  Makefile.am  Makefile.in
resource/html/: Makefile.am  Makefile.in  index.html
resource/html/css/: Makefile.am  Makefile.in
resource/html/js/: Makefile.am  Makefile.in
resource/image/: Makefile  Makefile.am  Makefile.in
resource/image/button/: Makefile  Makefile.am  Makefile.in
resource/image/combobox/: Makefile  Makefile.am  Makefile.in
resource/image/icon/: Makefile  Makefile.am  Makefile.in
resource/image/playmode/: Makefile  Makefile.am  Makefile.in
resource/image/skin/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in
src/app/: Makefile  Makefile.am  Makefile.in  iDouMusic  idou_main.c
src/app/.deps/: idou_main.Po
src/gui/: .idou_window.c.swp  Makefile  Makefile.am  Makefile.in  idou_button.c  idou_button.h  idou_combobox.c  idou_combobox.h  idou_combobox.lo  idou_music_manager.c  idou_music_manager.h  idou_music_manager.lo  idou_theme_dialog.c  idou_theme_dialog.h  idou_theme_dialog.lo  idou_titlebar.c  idou_titlebar.h  idou_titlebar.lo  idou_titlebar2.c  idou_titlebar2.h  idou_window.c  idou_window.h  idou_window.lo  libgui.la
src/gui/.deps/: idou_button.Plo  idou_combobox.Plo  idou_music_manager.Plo  idou_theme_dialog.Plo  idou_titlebar.Plo  idou_titlebar2.Plo  idou_window.Plo
src/itk/: Makefile  Makefile.am  Makefile.in  itk_button.c  itk_button.h  itk_button.lo  itk_titlebar.c  itk_titlebar.h  itk_titlebar.lo  libitk.la
src/itk/.deps/: itk_button.Plo  itk_titlebar.Plo
src/itk/.libs/: libitk.la
src/itk/test/: itk_window.c  itk_window.h  main.c
src/tools/: Makefile  Makefile.am  Makefile.in  gstplay.c  gstplay.h  gstplay.lo  libtools.la  parser.c
src/tools/.deps/: gstplay.Plo
